peac_dev/force-app/main/default/objects/Dealer_Sharing__c/Dealer_Sharing__c.object-meta.xml
<CustomObject>
    <label>Dealer Sharing</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Dealer Sharing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Sharings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>