peac_dev/force-app/main/default/objects/Dealer_Sharing__c/fields/Amount_Due_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_to_Vendor__c</fullName>
    <formula>(Interim_Rent_Dealer_Percentage__c *  Paid_Dollars__c )/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due to Vendor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>