peac_dev/force-app/main/default/objects/Dealer_Sharing__c/fields/API_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>API_GL_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API GL Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>