peac_dev/force-app/main/default/objects/Dealer_Sharing__c/fields/Billed_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Billed_Dollars__c</fullName>
    <label>Billed $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>