peac_dev/force-app/main/default/objects/Dealer_Sharing__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Dealer Sharings</relationshipLabel>
    <relationshipName>Dealer_Sharings</relationshipName>
    <type>Lookup</type>
</CustomField>