peac_dev/force-app/main/default/objects/Dealer_Sharing__c/fields/Dealer_Share_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Share_Amount__c</fullName>
    <formula>(Doc_Fee_Dealer_Percentage__c *  Paid_Dollars__c )/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Share Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>