peac_dev/force-app/main/default/objects/Dealer_Sharing__c/fields/Funded_Date_Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Funded_Date_Payment_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Funded Date/Payment Received Date</label>
    <type>Date</type>
</CustomField>