peac_dev/force-app/main/default/objects/Dealer_Sharing__c/fields/Interim_Rent_Dealer_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Interim_Rent_Dealer_Percentage__c</fullName>
    <formula>Contract__r.Dealer_Name__r.Interim_Rent_Dealer_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interim Rent Dealer Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>