peac_dev/force-app/main/default/objects/Dealer_Sharing__c/fields/PEAC_Check_ACH_Number__c.field-meta.xml
<CustomField>
    <fullName>PEAC_Check_ACH_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PEAC Check/ACH Number</label>
    <type>TextArea</type>
</CustomField>