peac_dev/force-app/main/default/objects/Dealer_Sharing__c/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>