peac_dev/force-app/main/default/objects/Dealer_Sharing__c/fields/Waived_Amount__c.field-meta.xml
<CustomField>
    <fullName>Waived_Amount__c</fullName>
    <label>Waived Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>